# NekoSauce

./: .env.example  .gitignore  README.md  SECURITY.md  compose-dev.yml  compose-prod.yml  compose.dev.yml  compose.yml  docker-compose.yml  production.yml
.github/: FUNDING.yml
backend/: .dockerignore  Dockerfile  manage.py  pyproject.toml  run.sh
backend/nekosauce/: celery.py  exceptions.py  settings.py  urls.py
backend/nekosauce/sauces/: admin.py  apps.py  models.py  tasks.py  urls.py
backend/nekosauce/sauces/management/commands/: updatehashes.py  updatesauces.py
backend/nekosauce/sauces/migrations/: 0003_alter_entity_options_alter_hash_options_and_more.py  0010_hash16bits_hash32bits_hash64bits_hash8bits_and_more.py  0013_alter_hash16bits_options_alter_hash32bits_options_and_more.py  0014_sourcecache.py  0015_delete_sourcecache.py
backend/nekosauce/sauces/sources/: __init__.py  danbooru.py  pixiv.py
backend/nekosauce/users/: apps.py
backend/sauces/: admin.py  apps.py  models.py  tasks.py
backend/sauces/management/commands/: updatehashes.py  updatesauces.py
backend/sauces/migrations/: 0001_initial.py  0001_squashed_0011_remove_hash_hash_idx_artist_created_at_and_more.py  0002_entity_tags_sauce_tags.py  0002_sauce_identifier.py  0004_remove_artist_direct_uploader_and_more.py  0005_sauce_created_at_sauce_updated_at_alter_hash_method.py  0006_alter_sauce_height_alter_sauce_width_and_more.py  0007_auto_20230817_0016.py  0008_artist_sauce_type_alter_sauce_downloaded_and_more.py  0010_auto_20230817_2146.py  0010_hash16bits_hash32bits_hash64bits_hash8bits_and_more.py  0011_remove_artist_links_remove_artist_names_and_more.py  0011_remove_hash_hash_idx_artist_created_at_and_more.py  0012_delete_artist.py  0013_alter_hash16bits_options_alter_hash32bits_options_and_more.py
backend/sauces/sources/: __init__.py  danbooru.py  pixiv.py
backend/sauces/utils/: fields.py
backend/users/migrations/: 0001_initial.py
src/backend/: Dockerfile  pyproject.toml  registry.jsonc  requirements.txt  run.sh
src/backend/nekosauce/: asgi.py  authentication.py  celery.py  exceptions.py  settings.py  urls.py  utils.py  views.py  wsgi.py
src/backend/nekosauce/sauces/: admin.py  apps.py  models.py  serializers.py  tasks.py  tree.py  urls.py  views.py
src/backend/nekosauce/stats/: admin.py  apps.py  models.py
src/backend/nekosauce/users/: admin.py  apps.py  models.py
(+99 files in other folders)
