[tool.poetry]
name = "nekosauce"
version = "0.1.0"
description = ""
authors = ["Rafael Bradley <84998222+Nekidev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.4"
djangorestframework = "^3.14.0"
gunicorn = "^21.2.0"
uvicorn = "^0.23.2"
psycopg2-binary = "^2.9.7"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
validators = "^0.21.2"
grequests = "^0.7.0"
imagehash = "^4.3.1"
redis = "^5.0.0"
django-debug-toolbar = "^4.2.0"
dramatiq = {extras = ["rabbitmq"], version = "^1.14.2"}
django-dramatiq = "^0.11.5"
django-bunny = "^1.1.6"
jstyleson = "^0.0.2"
django-cors-headers = "^4.2.0"
beautifulsoup4 = "^4.12.2"
pybktree = "^1.1"
daphne = "^4.0.0"
channels = "^4.0.0"
fastapi = {extras = ["uvicorn"], version = "^0.103.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
